--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,4 @@ anyhow = "1.0.98"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
 penrose = "0.4"
-penrose_ui = "0.4"
+penrose_ui = { git = "https://github.com/yanganto/penrose.git", branch = "quick-fix", package = "penrose_ui" }
